--- a/public/.htaccess
+++ b/public/.htaccess
@@ -11,3 +11,6 @@ RewriteRule (.+) wp-core/$1
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule (.+) wp-core/index.php [L]
+
+# Not redirect /proxy-posts/* to WordPress
+RewriteRule ^proxy-posts/(.*)$ - [L]
